# enigma

./: README.md  enigma.py  example.py  main.py  mypackage.toml  rotor.py  setup.cfg
.github/workflows/: main.yml
src/enigma/: __init__.py  analysis.py  enigma.py  key.py  plugboard.py  reflector.py  rotor.py
src/enigma/fitness_fun/: __init__.py  bigram_fitness.py  fitness_fun.py  frequency.py  ioc_fitness.py  known_plaintext.py  quadram_fitness.py  single_char.py  trigram_fitness.py
test/: test_enigma.py  test_reflector.py  test_rotor.py
