[metadata]
name = enigma
author = Matteo Campagnoli
author_email = matte.campa@yahoo.it
description = Enigma machine python implementation
license = Creative Common Attribution 4.0
license_file = LICENSE

[options]
packages = 
    enigma 
install_requires =
    tqdm>=4.66
    colorama>=0.4
package_dir=
    =src

[options.extras_require]
testing =
    pytest>=6.0
